2007-08-14  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Adam.

        - Updated Skipped list to reflect recent fixes.

        * platform/win/Skipped:

2007-08-14  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoff and Oliver.

        Add test for <rdar://problem/5267870>
        Mangleme: Reproducible assertion failure in -[WebCoreFrameBridge installInFrame:]

        * http/tests/misc/embedCrasher-expected.txt: Added.
        * http/tests/misc/embedCrasher.html: Added.

2007-08-14  Adele Peterson  <adele@apple.com>

        Reviewed by Maciej.

        Test for <rdar://problem/5370059> REGRESSION: Cannot type into edit fields on a form (sccsheriff.org)

        * editing/selection/user-select-text-inside-user-select-ignore-expected.txt: Added.
        * editing/selection/user-select-text-inside-user-select-ignore.html: Added.
        * fast/css/computed-style-expected.txt: Updated now that we've eliminated the auto value.
        * fast/css/computed-style-without-renderer-expected.txt: ditto.

2007-08-14  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Tim.
        
        <rdar://problem/5408255> REGRESSION: In Mail, clicking the containing element's UI closebox doesn't delete element

        * editing/deleting/5408255.html: Added.
        * editing/deleting/5408255-expected.checksum: Added.
        * editing/deleting/5408255-expected.png: Added.
        * editing/deleting/5408255-expected.txt: Added.

2007-08-14  Adele Peterson  <adele@apple.com>

        Reviewed by Brady.

        Test for http://bugs.webkit.org/show_bug.cgi?id=14746
        <rdar://problem/5401041> REGRESSION: Form state not saved for forms that submit via HTTPS even if they do not contain a password field

        * http/tests/navigation/resources/restore-form-state-https-1.html: Added.
        * http/tests/navigation/restore-form-state-https-expected.txt: Added.
        * http/tests/navigation/restore-form-state-https.html: Added.
