@@ -1,0 +1,15 @@
+<style></style>
+
+This tests that we support empty style sheets.
+
+<div id="result">Test failed.</div>
+
+<script>
+if (layoutTestController)
+    layoutTestController.dumpAsText();
+
+if (document.styleSheets[0]) {
+    var result = document.getElementById("result");
+    result.innerHTML = "Test succeeded!";
+}
+</script>
