@@ -1,3 +1,10 @@
+2007-08-15  Beth Dakin  <bdakin@apple.com>
+
+        Test for new support of empty style sheets.
+
+        * fast/css/emptyStyleTag-expected.txt: Added.
+        * fast/css/emptyStyleTag.html: Added.
+
 2007-08-14  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Adam.
